# skelet-bot

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_slug}}/app/: __main__.py  settings.py
{{cookiecutter.project_slug}}/app/routers/: base.py  master.py
{{cookiecutter.project_slug}}/app/utils/: commands.py  edgedb_client.py  i18n.py  logger.py  session.py
{{cookiecutter.project_slug}}/credentials/: local_dev.json
{{cookiecutter.project_slug}}/scripts/: start.sh
{{cookiecutter.project_slug}}/tests/: conftest.py
